# smit-test-task

./: .env.dev  Dockerfile.dev  Dockerfile.prod  ENVIRONMENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  nginx_config.conf  pyproject.toml
app/: db.py  main.py  settings.py
app/api/v1/: commands.py  models.py  routes.py  schemas.py  services.py  utils.py
